<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buddy_app</name>
  <version>0.1.0</version>
  <description>Single-process container loading all buddy components</description>
  <maintainer email="dev@buddy.robot">seb</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp_components</depend>
  <depend>class_loader</depend>
  <exec_depend>buddy_audio</exec_depend>
  <exec_depend>buddy_vision</exec_depend>
  <exec_depend>buddy_cloud</exec_depend>
  <exec_depend>buddy_dialog</exec_depend>
  <exec_depend>buddy_sentence</exec_depend>
  <exec_depend>buddy_state_machine</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
